# hydraulic_core

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
examples/: channel1.py  channel2.py  channel3.py  channel_inflow_csv.py  dam_break.py
examples/merewether/: run_merewether.py
hydro/: __init__.py  _core.py  domain.py  gpu.py  mesh_builder.py  mesh_utils.py  quantity_centroids.py  time_series_boundary.py
hydro/cuda/: hydro_cuda.cu  hydro_cuda.h
include/hydro/: boundaries.h  config.h  coordinate_transforms.h  domain.h  fit_interpolate.h  fluxes.h  forcing.h  friction.h  geometry.h  hydro.h  mesh.h  operators.h  quantity.h  solver.h  sparse.h  structures.h  sww.h  timestepping.h  types.h
python/: bindings.cpp  gpu_bindings.cpp
scripts/: build_pybind11.sh
src/: boundaries.c  coordinate_transforms.c  domain.c  fit_interpolate.c  fluxes.c  forcing.c  friction.c  geometry.c  mesh.c  operators.c  quantity.c  solver.c  sparse.c  structures.c  sww.c  timestepping.c
tests/: test_phase0.c  test_phase1.c  test_phase1b.c  test_phase2.c  test_phase3.c  test_phase4.c  test_phase5.c  test_phase6.c  test_time_series_boundary.py
tests/data/: inflow_hydrograph.csv
